<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TableRow android:layout_width="match_parent" android:layout_height="match_parent"/>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent"/>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent"/>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent"/>
    </TableLayout>
    <Button
            android:text="@string/convert"
            android:onClick="convert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:layout_marginBottom="12dp" app:layout_constraintBottom_toTopOf="@+id/display_conversion_result"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/input_miles"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/label_miles"
            android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/input_feet"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/label_feet"
            android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/input_inches"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/label_inches"
            android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:text="@string/miles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/label_miles" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" android:layout_marginTop="32dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.498"/>
    <TextView
            android:text="@string/feet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/label_feet" android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/input_miles" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"/>
    <TextView
            android:text="@string/inches"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/label_inches"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp" app:layout_constraintTop_toBottomOf="@+id/input_feet"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"/>
    <TextView
            android:text="result goes here"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:id="@+id/display_conversion_result"
            android:layout_marginBottom="16dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"/>
    <CheckBox
            android:text="@string/label_m"
            android:onClick="convert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/conversion_switch"
            app:layout_constraintStart_toEndOf="@+id/button"
            android:layout_marginStart="12dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="76dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>